Refractor map section according to BEM architecture

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -242,8 +242,8 @@ layout: layouts/base.njk
           <a aria-describedby="Multiple modes of engagement">Multiple modes of engagement</a>
         </h2>
 
-      <p>NRGI is one many actors working in concert to advence natural resource governance. NGRI delivers applied research, data and analysis, policy advocacy, capacity development, and technical assistance, and serves as a convener of actors working toward reform.</p>
-      <p>We focus those intervetions on specific areas of the extractive industries decision chain. Other actors undertake complementary work in development, rule of law and governance, and on other aspects of the  decision chain; their work suports and reinforces our  own.</p>
+        <p>NRGI is one many actors working in concert to advence natural resource governance. NGRI delivers applied research, data and analysis, policy advocacy, capacity development, and technical assistance, and serves as a convener of actors working toward reform.</p>
+        <p>We focus those intervetions on specific areas of the extractive industries decision chain. Other actors undertake complementary work in development, rule of law and governance, and on other aspects of the  decision chain; their work suports and reinforces our  own.</p>
 
 
         <div class="nrgi-impact-tag">
@@ -327,36 +327,36 @@ layout: layouts/base.njk
 </section>
 
 <section class="base-section">
-  <div class="center map-focus__container">
+  <div class="map">
     <img src="/images/nrgi-worldmap-where-we-work.svg" alt="nrgi-worlmap">
 
-    <div class="map-focus__wrapper">
-      <div class="focus-countries__container">
-        <div class="map-focus__title">
-          <h1>Focus countries</h1>
-        </div>
-        <div class="focus-countries-cluster__container">
-          <div class="map-cluster__btns">Colombia</div>
-          <div class="map-cluster__btns">Dem. Rep. of Congo</div>
-          <div class="map-cluster__btns">Ghana</div>
-          <div class="map-cluster__btns">Guinea</div>
-          <div class="map-cluster__btns">Mexico</div>
-          <div class="map-cluster__btns">Mongolia</div>
-          <div class="map-cluster__btns">Myanmar</div>
-          <div class="map-cluster__btns">Nigeria</div>
-          <div class="map-cluster__btns">Peru</div>
-          <div class="map-cluster__btns">Senegal</div>
-          <div class="map-cluster__btns">Tanzania</div>
-          <div class="map-cluster__btns">Uganda</div>
+    <div class="map__cluster-container">
+      <div class="map__countries-container">
+        <h1 class="map__cluster-title">Focus countries</h1>
+        <div class="cluster">
+          <div>
+            <div>Colombia</div>
+            <div>Dem. Rep. of Congo</div>
+            <div>Ghana</div>
+            <div>Guinea</div>
+            <div>Mexico</div>
+            <div>Mongolia</div>
+            <div>Myanmar</div>
+            <div>Nigeria</div>
+            <div>Peru</div>
+            <div>Senegal</div>
+            <div>Tanzania</div>
+            <div>Uganda</div>
+          </div>
         </div>
       </div>
-      <div class="focus-regions__container">
-        <div class="map-focus__title">
-          <h1>Focus regions</h1>
-        </div>
-        <div class="focus-regions-cluster__container">
-          <div class="map-cluster__btns">Eurasia</div>
-          <div class="map-cluster__btns">Middle East & North Africa</div>
+      <div class="map__regions-container">
+        <h1 class="map__cluster-title">Focus regions</h1>
+        <div class="cluster">
+          <div>
+            <div>Eurasia</div>
+            <div>Middle East & North Africa</div>
+          </div>
         </div>
       </div>
     </div>
