--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -168,7 +168,7 @@ layout: layouts/base.njk
   </div>
 </section>
 
-<section class="base-section cards__section">
+<section class="base-section cards-section">
   <ul class="grid">
 
     <li class="base-card">
@@ -182,7 +182,7 @@ layout: layouts/base.njk
           <p>Resource Governance Index drives reform</p>
         </div>
 
-        <button class="learn-more-btn" data-a11y-dialog-show="card-dialog-1">LEARN MORE</button>
+        <button class="base-card__button" data-a11y-dialog-show="card-dialog-1">LEARN MORE</button>
 
       </div>
     </li>
@@ -198,7 +198,7 @@ layout: layouts/base.njk
           <p>Guinea's road improved mining governance</p>
         </div>
 
-        <button class="learn-more-btn" data-a11y-dialog-show="card-dialog-2">LEARN MORE</button>
+        <button class="base-card__button" data-a11y-dialog-show="card-dialog-2">LEARN MORE</button>
 
       </div>
     </li>
@@ -214,7 +214,7 @@ layout: layouts/base.njk
           <p>A strengthened EITI standard</p>
         </div>
 
-        <button class="learn-more-btn" data-a11y-dialog-show="card-dialog-3">LEARN MORE</button>
+        <button class="base-card__button" data-a11y-dialog-show="card-dialog-3">LEARN MORE</button>
 
       </div>
     </li>
@@ -226,7 +226,7 @@ layout: layouts/base.njk
         </h2>
         <p>Governments that implement policies in line with good practice and citizen prioritie will likely increase benefits and reduce harms from the sector.</p>
 
-        <button class="learn-more-btn" data-a11y-dialog-show="card-dialog-4">LEARN MORE</button>
+        <button class="base-card__button" data-a11y-dialog-show="card-dialog-4">LEARN MORE</button>
 
       </div>
     </li>
