--- a/src/site/_includes/postcss/vendor-components/_grid.css
+++ b/src/site/_includes/postcss/vendor-components/_grid.css
@@ -15,7 +15,7 @@ https://absolutely.every-layout.dev/layouts/grid/
 
 .grid {
   display: grid;
-  grid-gap: 1rem;
+  grid-gap: var(--base-gap, 1rem);
 }
 
 @supports (width: min(250px, 100%)) {
