--- a/src/site/_includes/postcss/project-components/_sections.css
+++ b/src/site/_includes/postcss/project-components/_sections.css
@@ -15,113 +15,24 @@
   background-color: white;
 }
 
-.area-focus-section {
+.title-section--area-focus {
   background-image: url('/images/area-of-focus.png');
 }
 
-.bring-change-section {
+.title-section--bring-change {
   background-image: url('/images/bring-change.jpg');
 }
 
-.where-we-work-section {
+.title-section--where-we-work {
   background-image: url('/images/where-we-work.jpg');
 }
 
-.nrgi-impact-tag {
-  display: flex;
-  align-items: center;
-
-  > * + * { margin-left: var(--s0); }
-  
-  p {
-    font-size: .8rem;
-    font-style: italic;
-    opacity: .5;
-    font-weight: 300;
-    letter-spacing: .4px;
+.change-cards {
+  .grid { 
+    grid-template-columns: repeat(auto-fit, minmax(min(450px, 100%), 1fr)); 
+    --base-gap: var(--s1);
+    @media (min-width: 1000px) {  --base-gap: var(--s2); }
   }
-}
-
-.social-media {
-  * + * { margin-left: var(--s0); }
-
-  a { 
-    display: inline-block; 
-    background-color: white;
-    border-radius: 50%;
-    width: 2.8rem;
-    height: 2.8rem;
-    padding: 6px;
-  }
-
-  svg path { fill: var(--base-color); }
-}
-
-.nrgi-impact-tag__tag {
-  display: flex;
-  span { 
-    display: block; 
-    padding: var(--s-2) var(--s-1) calc(var(--s-2) + 1px); /* Correção visual para o texto */
-    background-color: var(--base-color);
-    font-size: .8rem;
-    line-height: 1;
-  }
-
-  span:last-child { background-color: var(--accent-color); }
-}
-
-.footer {
-  --padding: var(--s1);
-  background-color: var(--base-color);
-  
-  .center > div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-
-    @media (max-width: 850px) {  flex-direction: column; }
-  }
-
-  .social-media {
-    @media (max-width: 850px) {  margin: var(--s0) 0 }
-  }
-
-  a { text-decoration: none; }
-
-}
-
-.subscribe-form {
-  display: flex;
-  width: 400px;
-
-  input[type="text"] { 
-    background-color: rgba(255, 255, 255, .2); 
-    flex: 1;
-    
-    &::-webkit-input-placeholder { color: white; }
-    &:-moz-placeholder { color: white; }
-    &::-moz-placeholder { color: white; }
-    &:-ms-input-placeholder { color: white; }
-  }
-
-  input[type="submit"] {
-    background-color: var(--accent-color); 
-    text-transform: uppercase;
-    font-size: .8rem;
-    font-weight: 500;
-    color: white;
-    letter-spacing: .4px;
-  }
-}
-
-.by-line {
-  background-color: hsla(207, 31%, 45%, 1);
-  padding: var(--s-2) var(--s0);
-  text-align: right;
-  font-size: .75rem;
-  a { color: hsla(var(--white-hsl), .4); }
-  a:hover { color: white; }
 }
 
 .quote-section {
