--- a/src/site/_includes/base-components/card.njk
+++ b/src/site/_includes/base-components/card.njk
@@ -1,22 +1,19 @@
-<li class="base-card {{ card.class | d('') }}">
+<li class="base-card card {{ card.class | d('') }}">
   <div class="base-card__content">
     <h2><a href="#" aria-describedby="{{ card.heading | slug }}">{{ card.heading }}</a></h2>
-    
-    {% if card.subheading %}
-    <h3>{{ card.subheading }}</h3>
-    {% endif %}
 
     <p>{{ card.text }}</p>
     
-    {% if card.author.name %}
-    <small><a href="{{ card.author.url }}">By {{ card.author.name }}</a></small>
-    {% endif %}
-    
-    <span class="button {{ card.button.class | d('') }}" aria-hidden="true" id="{{ card.heading | slug }}">
-      {{ card.button.label | d('Read More', true) }}
-    </span>
+    <footer class="stack">
+      {% if card.tag_label %}
+      <div class="nrgi-impact-tag">
+      <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+      <p>{{ card.tag_label }}</p>
+      </div>
+      {% endif %}
+      
+      <button class="button {{ card.button.class | d('') }}" aria-hidden="true" id="{{ card.heading | slug }}" type="button" data-a11y-dialog-show="card-{{ loop.index }}">{{ card.button.label | d('Read More', true) }}</button>
+    </footer>
   </div>
-  <div class="base-card__img">
-    <img src="{{ card.image.url }}" alt="{{ card.image.description }}">
-  </div>
-</li>  
+</li>
+
