--- a/src/site/_includes/postcss/project-components/_title-section.css
+++ b/src/site/_includes/postcss/project-components/_title-section.css
@@ -7,7 +7,7 @@
   background-size: 50%;
   background-position: top right;
   color: var(--white-color);
-  padding: var(--s2) 0;
+  padding: var(--s2) var(--s1);
   display: flex;
   flex-direction: column;
   position: relative;
