--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -168,7 +168,7 @@ layout: layouts/base.njk
   </div>
 </section>
 
-<section class="base-section cards-section">
+<section class="base-section cards-section center">
   <ul class="grid">
 
     <li class="base-card">
