--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -168,7 +168,7 @@ layout: layouts/base.njk
   </div>
 </section>
 
-<section class="base-section cards-section center">
+<section class="base-section cards-section center center--wrapper">
   <ul class="grid">
 
     <li class="base-card">
@@ -327,8 +327,8 @@ layout: layouts/base.njk
 </section>
 
 <section class="base-section">
-  <div class="map">
-    <img src="/images/nrgi-worldmap-where-we-work.svg" alt="nrgi-worlmap">
+  <div class="map center center--wrapper">
+    <img class="map__image" src="/images/nrgi-worldmap-where-we-work.svg" alt="nrgi-worlmap">
 
     <div class="map__cluster-container">
       <div class="map__countries-container">
