--- a/src/site/_includes/postcss/project-components/_cards-section.css
+++ b/src/site/_includes/postcss/project-components/_cards-section.css
@@ -5,10 +5,10 @@ Contains all modal cards css
 */
 
 .cards-section {
-    padding: 20px;
+    padding: 40px;
 
     .base-card {
-        margin: 20px;
+        margin: 0 auto;
         max-width: 75ch;
         border: none;
     }
@@ -77,8 +77,4 @@ Contains all modal cards css
     .grid {
         grid-template-columns: repeat(auto-fit,minmax(min(500px,100%),1fr));
     }
-}
-
-.cards-section.center {
-    max-width: 160ch;
 }
