ajuste na section mission e dialogs fixas

--- a/src/site/_includes/postcss/project-components/_cards-section.css
+++ b/src/site/_includes/postcss/project-components/_cards-section.css
@@ -50,6 +50,7 @@ Contains all modal cards css
 
     .dialog-content {
         border: none;
+        position: fixed;
         padding: 100px 120px
     }
 
