--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -30,7 +30,7 @@ layout: layouts/base.njk
   </div>
 </header>
 
-<section class="mission-section text-section">
+<section class="mission-section text-section center">
   <div class="center center--measure">
     <p><strong>NRGI’s mission is ensuring that:</strong></p>
     <p>Countries rich in oil, gas and minerals achieve sustainable, inclusive development. </p>
