--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -45,23 +45,9 @@ layout: layouts/base.njk
   </div>
 </section>
 
-<section class="base-section connected-cards__section">
+<section class="base-section connected-cards__section center center--wrapper">
 
-  <div class="connected-lines__container">
-    <div class="connected-lines__wrapper">
-      <div class="between-lines-text">
-        <h1>Across these two areas, we will also address particular aspects of the energy transition and of corruption and "state capture".</h1>
-      </div>
-      <div class="connected-lines-straight line-right"></div>
-      <div class="connected-lines-straight line-left"></div>
-      <div class="connected-lines line-top-left"></div>
-      <div class="connected-lines line-top-right"></div>
-      <div class="connected-lines line-bottom-left"></div>
-      <div class="connected-lines line-bottom-right"></div>
-    </div>
-  </div>
-
-  <div class="connected-cards__container pull-up">
+  <div class="connected-cards__container pull-up grid">
     <div class="base-card__body">
       <h2 class="base-card__title"><a>getting a good deal</a></h2>
 
@@ -113,7 +99,22 @@ layout: layouts/base.njk
       </div>
     </div>
   </div>
-  <div class="connected-cards__container margin-top">
+
+    <div class="connected-lines__container">
+    <div class="connected-lines__wrapper">
+      <div class="between-lines-text">
+        <h1>Across these two areas, we will also address particular aspects of the energy transition and of corruption and "state capture".</h1>
+      </div>
+      <div class="connected-lines-straight line-right"></div>
+      <div class="connected-lines-straight line-left"></div>
+      <div class="connected-lines line-top-left"></div>
+      <div class="connected-lines line-top-right"></div>
+      <div class="connected-lines line-bottom-left"></div>
+      <div class="connected-lines line-bottom-right"></div>
+    </div>
+  </div>
+
+  <div class="connected-cards__container connected-cards__container--position_bottom grid">
 
     <div class="base-card__body bottom-card">
       <h2 class="base-card__title"><a>navigating the energy transition</a></h2>
@@ -330,7 +331,7 @@ layout: layouts/base.njk
   <div class="map center center--wrapper">
     <img class="map__image" src="/images/nrgi-worldmap-where-we-work.svg" alt="nrgi-worlmap">
 
-    <div class="map__cluster-container">
+    <div class="map__cluster-container center center--narrow">
       <div class="map__countries-container">
         <h1 class="map__cluster-title">Focus countries</h1>
         <div class="cluster">
