fixing modal window

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -151,6 +151,6 @@ layout: layouts/base.njk
 </div>
 
 {% for card in cards %}
-{% include 'base-components/a11y-dialog.njk' %}
+{% include '_modal-window.njk' %}
 {% endfor %}
 
