--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -60,6 +60,7 @@
 @import 'project-components/_sections.css';
 @import 'project-components/_nrgi-impact-tag.css';
 @import 'project-components/_subscribe-form.css';
+@import 'project-components/_modal-window.css';
 
 /* Custom Components */
 @import '_custom-component.css';
