--- a/src/site/_includes/postcss/project-components/_cards-section.css
+++ b/src/site/_includes/postcss/project-components/_cards-section.css
@@ -5,6 +5,9 @@ Contains all modal cards css
 */
 
 .cards-section {
+    padding-top: 0;
+    margin-top: -20px;
+
     .base-card {
         margin: 0 auto;
         max-width: 75ch;
@@ -12,6 +15,7 @@ Contains all modal cards css
     }
 
     .base-card__content {
+        background-color: white;
         position: relative;
     }
 
