--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -45,9 +45,11 @@ layout: layouts/base.njk
   </div>
 </section>
 
-<section class="base-section">
-  <div class="center center--wrapper">
-    <h1 class="text-align:center">Connected Cards</h1>
+<section class="base-section change-cards">
+  <div class="center center--wrapper grid card-grid">
+    {% for card in connectedCards %}
+      {% include 'base-components/connected-card.njk' %}
+    {% endfor %}
   </div>
 </section>
 
@@ -68,7 +70,7 @@ layout: layouts/base.njk
 <section class="base-section change-cards">
   <div class="center center--wrapper grid card-grid">
     {% for card in cards %}
-    {% include 'base-components/card.njk' %}
+      {% include 'base-components/card.njk' %}
     {% endfor %}
   </div>
 </section>
