--- a/src/site/_includes/postcss/_variables.css
+++ b/src/site/_includes/postcss/_variables.css
@@ -59,7 +59,7 @@ Variables to customize for each Project
   --base-color: hsla(var(--base-hsl), 1);  
 
   
-  --base-border-width: 0;
+  --base-border-width: 1px;
   
   /* These are the base visual configurations */
   --base-gap: var(--s3);
