--- a/src/site/_includes/postcss/project-components/_subscribe-form.css
+++ b/src/site/_includes/postcss/project-components/_subscribe-form.css
@@ -1,6 +1,7 @@
 .subscribe-form {
   display: flex;
-  width: 400px;
+  @media (min-width: 400px) { width: 400px; }
+  margin-bottom: var(--s1);
 
   input[type="text"] { 
     background-color: rgba(255, 255, 255, .2); 
