tweaks button border

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -20,7 +20,7 @@ layout: layouts/base.njk
         <p>The oil, gas and mining sectors have largely failed to deliver on the promise of better quality of life for the one billion people living in poverty in resource-rich countries.</p>
         <p>The Natural Resource Governance Institute works to change that.</p>
       </section>
-      <a class="button button--white-color">Learn More</a>
+      <a class="button button--white-color button--secondary">Learn More</a>
 
       <div class="nrgi-impact-tag">
         <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
