Connected cards layout

--- a/src/site/_includes/postcss/_variables.css
+++ b/src/site/_includes/postcss/_variables.css
@@ -61,6 +61,9 @@ Variables to customize for each Project
   
   --base-border-width: 0;
   
+  --card-border-width: var(--s-3);
+  --cluster-box-shadow:  0 2px 10px -3px rgba(62,92,117,.15);
+  
   /* These are the base visual configurations */
   --base-gap: var(--s3);
   --base-border: var(--base-border-width) solid hsla(var(--base-hsl), 1);
@@ -81,7 +84,9 @@ Variables to customize for each Project
 
 /* Modular Scale */
 :root {
-  --ratio: 1.62;
+  --ratio: 1.6180339887498948482;
+  --s-7: calc(var(--s-6) / var(--ratio));
+  --s-6: calc(var(--s-5) / var(--ratio));
   --s-5: calc(var(--s-4) / var(--ratio));
   --s-4: calc(var(--s-3) / var(--ratio));
   --s-3: calc(var(--s-2) / var(--ratio));
@@ -93,4 +98,6 @@ Variables to customize for each Project
   --s3: calc(var(--s2) * var(--ratio));
   --s4: calc(var(--s3) * var(--ratio));
   --s5: calc(var(--s4) * var(--ratio));
+  --s6: calc(var(--s5) * var(--ratio));
+  --s7: calc(var(--s6) * var(--ratio));
 }
