--- a/src/site/_includes/postcss/project-components/_connected-card.css
+++ b/src/site/_includes/postcss/project-components/_connected-card.css
@@ -1,6 +1,92 @@
-.card__tag {
-  padding: var(--s-3) var(--s0);
-  border: 1px solid hsla(var(--primary-hsl), .2);
-  background-color: hsla(360, 100%, 100%, .8);
-  white-space: nowrap; /* avoids line breaks for the tags */
+.connected-cards-section {
+	margin-top: -100px;
+
+	.grid {
+		padding: 0 var(--s3);
+		justify-content: center;
+	}
+}
+
+.connected-card {
+	list-style: none;
+	box-shadow: var(--base-shadow);
+  	padding: calc(var(--s2) + var(--s-1)) var(--s2) var(--s2);
+	position: relative;
+	border: solid var(--accent-color);
+    border-width: var(--card-border-width) 0 var(--card-border-width) 0;
+    max-width: var(--s7);
+    margin: 0 auto;
+    background-color: var(--active-color);
+
+	.cluster {
+		overflow: visible;
+		margin: var(--s-1) 0 var(--s1);
+	}
+
+	.cluster > * {
+    	margin: unset;
+	}
+
+	.cluster > * > * {
+    	margin: calc(var(--s1) / 3) calc(var(--s1) / 2) 0 0;
+	}
+
+	.nrgi-impact-tag {
+		position: absolute;
+		bottom: calc((var(--s4) + var(--card-border-width)) / 2 + var(--s1));
+		padding-right: var(--s-1);
+	}
+}
+
+.connected-card__tag {
+	box-shadow: var(--cluster-box-shadow);
+  	padding: var(--s-3) var(--s0);
+  	border: 1px solid hsla(var(--primary-hsl), .1);
+  	background-color: hsla(360, 100%, 100%, .8);
+  	white-space: nowrap; /* avoids line breaks for the tags */
+}
+
+.connected-card__icon--deal {
+	background: url(/images/deal-icon.svg) 50% 50% no-repeat;
+}
+
+.connected-card__icon--revenues {
+	background: url(/images/revenues-icon.svg) 50% 50% no-repeat;
+}
+
+.connected-card__icon--energy-transition {
+	background: url(/images/energy-transition-icon.svg) 50% 50% no-repeat;
+}
+
+.connected-card__icon--corruption {
+	background: url(/images/corruption-icon.svg) 50% 50% no-repeat;
+}
+
+.connected-card__icon {
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%, 0);
+    width: var(--s4);
+    height: var(--s4);
+    background-size: var(--s3);
+    background-color: var(--active-color);
+    border: var(--card-border-width) solid var(--accent-color);
+    border-radius: 100%;
+	background-color: #fff;
+    background-size: var(--s3) var(--s3);
+    z-index: 1;
+}
+
+.connected-card--top {
+	padding-bottom:  calc((var(--s4) + var(--card-border-width))/2 + var(--s3));
+
+	.connected-card__icon {
+		bottom: calc((var(--s4) + var(--card-border-width)) / 2 * -1);
+	}
+}
+
+.connected-card--bottom {
+	.connected-card__icon {
+		top: calc((var(--s4) + var(--card-border-width)) / 2 * -1);
+	}
 }
