--- a/src/site/_includes/base-components/connected-card.njk
+++ b/src/site/_includes/base-components/connected-card.njk
@@ -5,9 +5,9 @@
 
     <h2><a href="#" aria-describedby="{{ card.heading | slug }}">{{ card.heading }}</a></h2>
 
-    <h5>Objective</h5>
+    <h5 class="connected-card__subheading">Objective</h5>
 
-    <p>{{ card.text }}</p>
+    <p class="connected-card__text">{{ card.text }}</p>
 
     <div class="cluster">
       <div>  
