--- a/src/site/_includes/postcss/project-components/_sections.css
+++ b/src/site/_includes/postcss/project-components/_sections.css
@@ -17,14 +17,17 @@
 
 .title-section--area-focus {
   background-image: url('/images/area-of-focus.png');
+  flex-direction: row;
 }
 
 .title-section--bring-change {
   background-image: url('/images/bring-change.jpg');
+  flex-direction: row;
 }
 
 .title-section--where-we-work {
   background-image: url('/images/where-we-work.jpg');
+  flex-direction: row;
 }
 
 .change-cards {
