--- a/src/site/_includes/postcss/project-components/_connected-card.css
+++ b/src/site/_includes/postcss/project-components/_connected-card.css
@@ -4,19 +4,21 @@
 	.grid {
 		padding: 0 var(--s3);
 		justify-content: center;
+		grid-gap: var(--s5);
+		grid-template-columns: repeat(auto-fit, minmax(min(320px, 100%), 1fr));
 	}
 }
 
 .connected-card {
 	list-style: none;
 	box-shadow: var(--base-shadow);
-  	padding: calc(var(--s2) + var(--s-1)) var(--s2) var(--s2);
+	padding: calc(var(--s2) + var(--s-1)) var(--s2) var(--s2);
 	position: relative;
 	border: solid var(--accent-color);
-    border-width: var(--card-border-width) 0 var(--card-border-width) 0;
-    max-width: var(--s7);
-    margin: 0 auto;
-    background-color: var(--active-color);
+	border-width: var(--card-border-width) 0 var(--card-border-width) 0;
+	max-width: var(--s7);
+	margin: 0 auto;
+	background-color: var(--active-color);
 
 	.cluster {
 		overflow: visible;
@@ -24,11 +26,11 @@
 	}
 
 	.cluster > * {
-    	margin: unset;
+		margin: unset;
 	}
 
 	.cluster > * > * {
-    	margin: calc(var(--s1) / 3) calc(var(--s1) / 2) 0 0;
+		margin: calc(var(--s1) / 3) calc(var(--s1) / 2) 0 0;
 	}
 
 	.nrgi-impact-tag {
@@ -38,12 +40,22 @@
 	}
 }
 
+.connected-card__subheading {
+	text-transform: uppercase;
+	margin-bottom: var(--s-3);
+	color: hsla(var(--black-hsl), .8);
+}
+
+.connected-card__text {
+	color: hsla(var(--black-hsl), .9);
+}
+
 .connected-card__tag {
 	box-shadow: var(--cluster-box-shadow);
-  	padding: var(--s-3) var(--s0);
-  	border: 1px solid hsla(var(--primary-hsl), .1);
-  	background-color: hsla(360, 100%, 100%, .8);
-  	white-space: nowrap; /* avoids line breaks for the tags */
+	padding: var(--s-3) var(--s0);
+	border: 1px solid hsla(var(--primary-hsl), .1);
+	background-color: hsla(360, 100%, 100%, .8);
+	color: hsla(var(--black-hsl), .9);
 }
 
 .connected-card__icon--deal {
@@ -66,19 +78,19 @@
 	position: absolute;
 	left: 50%;
 	transform: translate(-50%, 0);
-    width: var(--s4);
-    height: var(--s4);
-    background-size: var(--s3);
-    background-color: var(--active-color);
-    border: var(--card-border-width) solid var(--accent-color);
-    border-radius: 100%;
+	width: var(--s4);
+	height: var(--s4);
+	background-size: var(--s3);
+	background-color: var(--active-color);
+	border: var(--card-border-width) solid var(--accent-color);
+	border-radius: 100%;
 	background-color: #fff;
-    background-size: var(--s3) var(--s3);
-    z-index: 1;
+	background-size: var(--s3) var(--s3);
+	z-index: 1;
 }
 
 .connected-card__icon.pulse {
-    animation: pulse 2s infinite;
+	animation: pulse 2s infinite;
 }
 
 .connected-card--top {
@@ -96,13 +108,13 @@
 }
 
 @keyframes pulse {
-    0% {
-        /*transform: scale(0.98);*/
-        box-shadow: 0 0 0 0 rgb(233 103 71);
-    }
+	0% {
+		/*transform: scale(0.98);*/
+		box-shadow: 0 0 0 0 rgb(233 103 71);
+	}
 
-    100% {
-        /*transform: scale(1);*/
-        box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
-    }
+	100% {
+		/*transform: scale(1);*/
+		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+	}
 }
