--- a/src/site/_includes/postcss/project-components/_hero-section.css
+++ b/src/site/_includes/postcss/project-components/_hero-section.css
@@ -23,6 +23,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media (max-width: 500px) { 
+    flex-direction: column;
+    align-items: unset;
+
+    .hero-section__download-btn {
+      margin-top: var(--s-1);
+    }
+  }
 }
 
 .hero-section__content > .center > * + * { margin-top: var(--s1); }
