--- a/src/site/_includes/postcss/project-components/_subscribe-form.css
+++ b/src/site/_includes/postcss/project-components/_subscribe-form.css
@@ -1,7 +1,14 @@
 .subscribe-form {
   display: flex;
-  @media (min-width: 400px) { width: 400px; }
   margin-bottom: var(--s1);
+
+  @media (max-width: 500px) {
+    width: 100%; 
+    flex-direction: column;
+  }
+  
+  @media (min-width: 501px) { width: 400px }
+
 
   input[type="text"] { 
     background-color: rgba(255, 255, 255, .2); 
